# ClawDesk

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  file.rs  mod.rs  system.rs
src/components/: ErrorBoundary.tsx
src/components/chat/: ChatInput.tsx  ChatPanel.tsx
src/components/command/: CommandPalette.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/screen/: ScreenHistory.tsx  ScreenPanel.tsx  ScreenResult.tsx
src/components/settings/: DataPanel.tsx  SettingsPanel.tsx  UpdaterPanel.tsx
src/components/tools/: ClipboardPanel.tsx  FileSearch.tsx  SnippetsPanel.tsx  TerminalPanel.tsx
src/lib/: ai-client.ts  i18n.ts
src/stores/: chatStore.ts  screenStore.ts  settingsStore.ts  toolStore.ts
